--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bcrypt": "^5.1.0",
     "colour": "^0.7.1",
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.9",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
